# Sentry_nav

./: .gitignore  Dockerfile  README.md  build.sh  foxglove.sh  real_nav.sh  requirement.txt  save_grid_map.sh  sim_nav.sh  vision_only.sh
src/nav_client/: CMakeLists.txt  package.xml
src/nav_client/config/: socket_param.yaml
src/nav_client/include/nav_client/: nav_client.hpp  nav_packet.hpp  nav_socket_node.hpp  socket_io.hpp  t_udp_socket_node.hpp  test_nav_socket_node.hpp  vision_client_node.hpp  vision_only_node.hpp
src/nav_client/launch/: nav_client_bringup.launch.py  test_socket_bringup.launch.py  udp_sender_bringup.launch.py  vision_client_bringup.launch.py
src/nav_client/src/: nav_client.cpp  nav_socket_node.cpp  socket_io.cpp  t_udp_socket_node.cpp  test_nav_socket_node.cpp  vision_client_node.cpp  vision_only_node.cpp
src/nav_control/: package.xml  setup.cfg  setup.py
src/nav_control/nav_control/: nav_to_pose.py  robot_nav.py  robot_navigator.py  robot_state.py
src/nav_interface/: CMakeLists.txt  package.xml
src/nav_interface/msg/: Detector.msg  GameStatus.msg  LocationInfo.msg  RobotStatus.msg  SocketMsg.msg  Tracker.msg
src/nav_interface/srv/: Relocate.srv
src/nav_robot_description/: CMakeLists.txt  package.xml
src/nav_robot_description/launch/: rm_description_bringup.launch.py
src/nav_robot_description/urdf/: robot_urdf.xacro  sim_robot_urdf.xacro
src/nav_scripts/: package.xml  setup.cfg  setup.py
src/nav_scripts/nav_scripts/: nav_logic.py  nav_through_pose.py  nav_to_pose.py  robot_nav_example.py  rotating.py
src/nav_scripts/test_py/: source_calibrate_angule.py
src/rm_bringup/: CMakeLists.txt  package.xml
src/rm_bringup/config/: nav2_params_controller_frequency.yaml  nav2_params_origin_teb.yaml  nav2_params_origin_teb_copy.yaml  (+4 more)
twist_test_script/: clockwise_yaw.sh  forward_test.sh  silde_test.sh  stop.sh
(+46 files in other folders)
